# NXE

./: .gitignore  CMakeLists.txt  Makefile  README.md  ReadMe.md
dev/: main.cc
include/: fenix.hxx
include/fenix/: all.hxx
include/nxe/: lexer
lib/cmake/: test.cmake
lib/cxx/data/: string.cxx  string.hxx
lib/data/: string.cxx  string.hxx
project/test/: CMakeLists.txt  main.cxx
src/: main.cxx  nxe.cxx
src/lexer/: lexer.cxx  lexer.hxx  scanner.cxx  scanner.hxx
src/subdir/: lib.cxx  lib.hxx
test/: data-string.cxx
util/include/nxe/: util
util/lib/: array.cc  array.h  res.h  string.cc  string.h
util/test/: construct.cc  order.cc
